--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-  <androidx.fragment.app.FragmentContainerView
-      android:id="@+id/nav_host_fragment_container"
-      android:name="com.app.movie.presentation.SplashFragment"
-      app:navGraph="@navigation/nav_graph"
+  <data>
+
+    <import type="android.view.View" />
+
+    <variable
+        name="showNavigation"
+        type="java.lang.Boolean" />
+  </data>
+
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      app:defaultNavHost="true"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
- <!-- <com.google.android.material.bottomnavigation.BottomNavigationView
-      android:id="@+id/navigationBottom"
-      android:layout_width="0dp"
-      android:layout_height="wrap_content"
-      android:background="@color/colorGrey"
-      android:visibility="@{showNavigation ? View.VISIBLE : View.GONE}"
-      app:itemIconTint="@drawable/tab_color"
-      app:itemTextAppearance="@style/MineCustomTabText"
-      app:itemTextAppearanceActive="@style/MineCustomTabText"
-      app:itemTextAppearanceInactive="@style/MineCustomTabText"
-      app:itemTextColor="@drawable/tab_color"
-      app:labelVisibilityMode="labeled"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:menu="@menu/navigation_bottom" />
--->
-</androidx.constraintlayout.widget.ConstraintLayout>
+      tools:context=".presentation.ui.MainActivity">
+
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".presentation.view.main.MainActivity"
+        tools:openDrawer="start">
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:defaultNavHost="true"
+            app:layout_constraintBottom_toTopOf="@+id/navigationBottom"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/nav_graph" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/navigationBottom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/colorGrey"
+            app:itemIconTint="@drawable/tab_color"
+            app:itemTextAppearance="@style/MineCustomTabText"
+            app:itemTextAppearanceActive="@style/MineCustomTabText"
+            app:itemTextAppearanceInactive="@style/MineCustomTabText"
+            app:itemTextColor="@drawable/tab_color"
+            app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/navigation_bottom" />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+      <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+      <com.google.android.material.navigation.NavigationView
+          android:id="@+id/nav_view"
+          android:layout_width="@dimen/_259sdp"
+          android:layout_height="match_parent"
+          android:layout_gravity="start"
+          android:background="@color/colorGrey"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.drawerlayout.widget.DrawerLayout>
+
+  </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
