--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,8 @@
 
     <fragment
         android:id="@+id/splashFragment"
-        android:name="com.app.movie.presentation.SplashFragment"
+        android:name="com.app.movie.presentation.ui.SplashFragment"
         android:label="fragment_splash"
         tools:layout="@layout/fragment_splash" />
+
 </navigation>
