--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,231 @@
 <resources>
+
+
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="AppBottomSheetDialogTheme" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/AppModalStyle</item>
+    </style>
+
+    <style name="AppModalStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/bottom_sheet_round_style</item>
+    </style>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme1" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/color_dark_blue</item>
+        <item name="colorAccent">@color/color_blue</item>
+    </style>
+
+
+    <!-- Base application theme. -->
+    <style name="AppTheme2" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+
+
+    </style>
+
+    <!-- Base application theme. -->
+    <style name="AppTheme3" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <item name="windowNoTitle">true</item>
+
+    </style>
+
+
+    <style name="WIN_FULL_SCREEN" parent="@style/AppTheme3">
+        <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+        <!--<item name="colorPrimary">@android:color/transparent</item>-->
+        <!--        <item name="colorPrimary">@color/my_color3</item>-->
+        <!--        <item name="colorPrimary">@color/Orange</item>-->
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <!--        <item name="android:windowBackground">@color/my_color3</item>-->
+        <!--        <item name="android:windowBackground">@color/Orange</item>-->
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+        <!--<item name="android:windowTranslucentNavigation">true</item>-->
+    </style>
+
+    <style name="Theme.Light.NoActionBar" parent="@style/Theme.AppCompat.Light.NoActionBar">
+        <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+        <!--<item name="colorPrimary">@android:color/transparent</item>-->
+        <!--        <item name="colorPrimary">@color/my_color3</item>-->
+        <!--        <item name="colorPrimary">@color/Orange</item>-->
+        <item name="colorPrimaryDark">@android:color/transparent</item>
+        <!--        <item name="android:windowBackground">@color/my_color3</item>-->
+        <!--        <item name="android:windowBackground">@color/Orange</item>-->
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="actionMenuTextColor">@color/white</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+        <!--<item name="android:windowTranslucentNavigation">true</item>-->
+        <item name="windowNoTitle">true</item>
+    </style>
+
+
+    <!--Dialog style-->
+    <style name="FullHeightDialog" parent="android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme_Dialog" parent="android:Theme.Dialog">
+        <item name="android:windowMinWidthMajor">80%</item>
+        <item name="android:windowMinWidthMinor">80%</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.MaterialComponents.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.MaterialComponents.Light" />
+
+    <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
+
+    <style name="TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextAppearance">@style/HintText</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="boxBackgroundColor">@android:color/white</item>
+
+    </style>
+
+    <style name="TextInputLayout_gray" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="hintTextAppearance">@style/HintText</item>
+        <item name="boxBackgroundColor">@android:color/white</item>
+        <item name="boxStrokeColor">@android:color/white</item>
+        <item name="boxStrokeWidth">@dimen/_2sdp</item>
+        <item name="boxCollapsedPaddingTop">@dimen/_20sdp</item>
+
+    </style>
+
+    <style name="HintText" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:paddingStart">@dimen/_5sdp</item>
+        <item name="android:paddingEnd">@dimen/_5sdp</item>
+        <item name="boxBackgroundColor">@color/white</item>
+
+    </style>
+
+    <style name="styleSearchBar" parent="Base.Widget.MaterialComponents.TextInputEditText">
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:background">@drawable/white_search_bar</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/_26sdp</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:inputType">text</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textColorHint">#9E9E9E</item>
+        <item name="android:textSize">@dimen/_10ssp</item>
+    </style>
+
+    <!-- Style for TextInputEditText: Used mainly in all TextFields -->
+    <style name="mainTextInputEditText" parent="Base.Widget.MaterialComponents.TextInputEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:layout_height">59dp</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:textColor">@color/color_gray</item>
+        <item name="android:textSize">@dimen/_9ssp</item>
+        <item name="android:paddingBottom">-2dp</item>
+        <item name="android:background">@drawable/round_edittext</item>
+    </style>
+
+    <style name="mainAutoCompleteTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:editable">false</item>
+        <item name="android:textSize">@dimen/_9ssp</item>
+    </style>
+
+    <style name="mainAutoCompleteTextView2">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:editable">false</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+    </style>
+    <!-- Style for the black text used as a header -->
+    <style name="headerTextView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">@dimen/_22sdp</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:fontFamily">@font/muli</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/blackHeaderText</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- TextHint style: For sara :3 -->
+    <style name="TextInputLayoutHintText">
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:textSize">@dimen/_8ssp</item>
+    </style>
+
+    <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">10sp</item>
+        <item name="textAllCaps">false</item>
+        <item name="fontFamily">@font/muli_medium</item>
+    </style>
+
+    <style name="ViewPagerStyle">
+        <item name="android:fontFamily">@font/muli_bold</item>
+        <item name="android:textSize">@dimen/_13ssp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="ProfileViewPagerStyle">
+        <item name="android:fontFamily">@font/muli_medium</item>
+        <item name="android:textSize">@dimen/_10ssp</item>
+        <item name="android:textColor">@color/colorSubtitle60</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
 
 </resources>
