--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/homePageFragment"
+        android:icon="@drawable/nav_home"
+
+        android:title="@string/home" />
+
+    <item
+        android:id="@+id/placeHolder"
+        android:title="" />
+
+    <item
+        android:id="@+id/actionMyLessons"
+        android:icon="@drawable/nav_fav"
+        android:title="@string/fav" />
+
 </menu>
