--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,67 +3,90 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-  <data>
+    <data>
 
-    <import type="android.view.View" />
+        <import type="android.view.View" />
 
-    <variable
-        name="showNavigation"
-        type="java.lang.Boolean" />
-  </data>
+        <variable
+            name="showNavigation"
+            type="java.lang.Boolean" />
+    </data>
 
-  <androidx.drawerlayout.widget.DrawerLayout
-      android:id="@+id/drawerLayout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      tools:context=".presentation.view.main.MainActivity"
-      tools:openDrawer="start">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.drawerlayout.widget.DrawerLayout
+        android:id="@+id/drawerLayout"
+        style="@style/Theme.MaterialComponents"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-      <fragment
-          android:id="@+id/nav_host_fragment"
-          android:name="androidx.navigation.fragment.NavHostFragment"
-          android:layout_width="0dp"
-          android:layout_height="0dp"
-          app:defaultNavHost="true"
-          app:layout_constraintBottom_toTopOf="@+id/navigationBottom"
-          app:layout_constraintLeft_toLeftOf="parent"
-          app:layout_constraintRight_toRightOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          app:navGraph="@navigation/nav_graph" />
-
-      <com.google.android.material.bottomnavigation.BottomNavigationView
-          android:id="@+id/navigationBottom"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:background="@color/colorGrey"
-          android:visibility="@{showNavigation ? View.VISIBLE : View.GONE}"
-          app:itemIconTint="@drawable/tab_color"
-          app:itemTextAppearance="@style/MineCustomTabText"
-          app:itemTextAppearanceActive="@style/MineCustomTabText"
-          app:itemTextAppearanceInactive="@style/MineCustomTabText"
-          app:itemTextColor="@drawable/tab_color"
-          app:labelVisibilityMode="labeled"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:menu="@menu/navigation_bottom" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="@dimen/_259sdp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/colorGrey"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-  </androidx.drawerlayout.widget.DrawerLayout>
+        tools:context=".presentation.view.main.MainActivity"
+        tools:openDrawer="start">
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <fragment
+                    android:id="@+id/nav_host_fragment"
+                    android:name="androidx.navigation.fragment.NavHostFragment"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:defaultNavHost="true"
+                    app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:navGraph="@navigation/nav_graph"
+                    tools:ignore="FragmentTagUsage" />
+
+                <com.google.android.material.bottomappbar.BottomAppBar
+                    android:id="@+id/bottomAppBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="@{showNavigation ? View.VISIBLE : View.GONE}"
+                    app:fabCradleMargin="20dp"
+                    app:fabCradleRoundedCornerRadius="20dp"
+                    app:fabCradleVerticalOffset="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="BottomAppBar">
+
+                    <com.google.android.material.bottomnavigation.BottomNavigationView
+                        android:id="@+id/navigationBottom"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorGrey"
+                        app:itemIconTint="@drawable/tab_color"
+                        app:itemTextAppearance="@style/MineCustomTabText"
+                        app:itemTextAppearanceActive="@style/MineCustomTabText"
+                        app:itemTextAppearanceInactive="@style/MineCustomTabText"
+                        app:itemTextColor="@drawable/tab_color"
+                        app:labelVisibilityMode="labeled"
+                        app:menu="@menu/navigation_bottom" />
+                </com.google.android.material.bottomappbar.BottomAppBar>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/searchIcon"
+                app:layout_anchor="@id/navigationBottom" />
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="@dimen/_259sdp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/colorGrey"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.drawerlayout.widget.DrawerLayout>
 </layout>
