--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -5,6 +5,12 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="homeViewModel"
+            type="com.app.movie.presentation.ui.homepage.HomeViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -25,15 +31,14 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <recycler.coverflow.RecyclerCoverFlow
-            android:id="@+id/list"
+            android:id="@+id/recommendedVideosTrailer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:scrollbars="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recommendedVideos">
-
-        </recycler.coverflow.RecyclerCoverFlow>
+            app:layout_constraintTop_toBottomOf="@+id/recommendedVideos" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
