--- a/app/src/main/res/drawable/up_round_style.xml
+++ b/app/src/main/res/drawable/up_round_style.xml
@@ -2,6 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/color_blur" />
-    <corners android:bottomRightRadius="50dp" />
+    <corners
+        android:topLeftRadius="25dp"
+        android:topRightRadius="25dp" />
 
 </shape>
