--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -12,81 +11,42 @@
             type="java.lang.Boolean" />
     </data>
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawerLayout"
-        style="@style/Theme.MaterialComponents"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorGrey">
 
-        tools:context=".presentation.view.main.MainActivity"
-        tools:openDrawer="start">
-
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <fragment
-                    android:id="@+id/nav_host_fragment"
-                    android:name="androidx.navigation.fragment.NavHostFragment"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    app:defaultNavHost="true"
-                    app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:navGraph="@navigation/nav_graph"
-                    tools:ignore="FragmentTagUsage" />
-
-                <com.google.android.material.bottomappbar.BottomAppBar
-                    android:id="@+id/bottomAppBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:visibility="@{showNavigation ? View.VISIBLE : View.GONE}"
-                    app:fabCradleMargin="20dp"
-                    app:fabCradleRoundedCornerRadius="20dp"
-                    app:fabCradleVerticalOffset="10dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="BottomAppBar">
-
-                    <com.google.android.material.bottomnavigation.BottomNavigationView
-                        android:id="@+id/navigationBottom"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorGrey"
-                        app:itemIconTint="@drawable/tab_color"
-                        app:itemTextAppearance="@style/MineCustomTabText"
-                        app:itemTextAppearanceActive="@style/MineCustomTabText"
-                        app:itemTextAppearanceInactive="@style/MineCustomTabText"
-                        app:itemTextColor="@drawable/tab_color"
-                        app:labelVisibilityMode="labeled"
-                        app:menu="@menu/navigation_bottom" />
-                </com.google.android.material.bottomappbar.BottomAppBar>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/searchIcon"
-                app:layout_anchor="@id/navigationBottom" />
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/nav_view"
-            android:layout_width="@dimen/_259sdp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="@color/colorGrey"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/navigationBottom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/up_round_style"
+            android:elevation="@dimen/_20sdp"
+            app:elevation="@dimen/_8sdp"
+            app:itemIconTint="@drawable/tab_color"
+            app:itemTextAppearance="@style/MineCustomTabText"
+            app:itemTextAppearanceActive="@style/MineCustomTabText"
+            app:itemTextAppearanceInactive="@style/MineCustomTabText"
+            app:itemTextColor="@drawable/tab_color"
+            app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:menu="@menu/navigation_bottom" />
 
-    </androidx.drawerlayout.widget.DrawerLayout>
+        <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:defaultNavHost="true"
+            app:layout_constraintBottom_toTopOf="@+id/navigationBottom"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/nav_graph" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
