--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -16,29 +16,49 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/colorGrey"
+
         tools:context=".presentation.ui.homepage.HomeFragment">
 
-        <TextView
-            android:id="@+id/recommendedVideos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/muli_medium"
-            android:text="@string/recommendedVideos"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/_12sdp"
-            app:layout_constraintEnd_toEndOf="parent"
+        <View
+            android:id="@+id/recommendedVideosV"
+            android:layout_width="@dimen/_4sdp"
+            android:layout_height="@dimen/_24sdp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/red"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <recycler.coverflow.RecyclerCoverFlow
-            android:id="@+id/recommendedVideosTrailer"
+        <TextView
+            android:id="@+id/recommendedVideosTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:fontFamily="@font/muli_bold"
+            android:gravity="center"
+            android:text="@string/recommendedVideos"
+            android:textColor="@color/colorSubtitle"
+            android:textSize="@dimen/_18sdp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/recommendedVideosV"
+            app:layout_constraintStart_toEndOf="@+id/recommendedVideosV"
+            app:layout_constraintTop_toTopOf="@+id/recommendedVideosV" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recommendedVideosTrailerRv"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:scrollbars="horizontal"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/_8sdp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recommendedVideosV"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recommendedVideos" />
+            tools:listitem="@layout/item_trailer" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
