--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -5,45 +5,39 @@
 
     <data>
 
+        <variable
+            name="MovieVideoTrailer"
+            type="java.lang.String" />
     </data>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="@dimen/_240sdp"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/_370sdp"
+        android:layout_gravity="center"
         android:elevation="@dimen/_6sdp"
+        android:layout_margin="@dimen/_12sdp"
+        android:gravity="center"
+
         app:cardCornerRadius="16dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+
+        <ImageView
+            android:id="@+id/MoviesTrailerImg"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:contentDescription="view Video"
+            android:trailerImage="@{MovieVideoTrailer}" />
 
+
+        <ImageView
+            android:id="@+id/viewTrailer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/color_blue">
+            android:elevation="@dimen/_8sdp"
+            android:src="@drawable/ic_play"
+            tools:ignore="ContentDescription" />
 
-            <ImageView
-                android:id="@+id/addEducationalMaterial"
-                android:layout_width="@dimen/_40sdp"
-                android:layout_height="@dimen/_40sdp"
-                android:layout_margin="@dimen/_15sdp"
-                android:background="@drawable/back_solid_circle"
-                android:backgroundTint="?attr/fadeBackground"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <ImageView
-                android:id="@+id/viewTrailer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_play"
-                app:layout_constraintBottom_toBottomOf="@id/addEducationalMaterial"
-                app:layout_constraintEnd_toEndOf="@id/addEducationalMaterial"
-                app:layout_constraintStart_toStartOf="@id/addEducationalMaterial"
-                app:layout_constraintTop_toTopOf="@id/addEducationalMaterial"
-                tools:ignore="ContentDescription" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </layout>
