--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
     <color name="colorWhite">#FFF</color>
     <color name="gradient_end_color">#5CD1C7</color>
     <color name="color_blue">#3B58E2</color>
-    <color name="color_blue2">#3B58E2</color>
+    <color name="color_blur">#33ffffff</color>
     <color name="black_i_am_student">#212121</color>
     <color name="color_gray">#9E9E9E</color>
     <color name="color_name_input_et">#212121</color>
