--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -8,57 +8,227 @@
         <import type="android.view.View" />
 
         <variable
+            name="isLoadingTV"
+            type="java.lang.Boolean" />
+
+        <variable
+            name="isLoadingMovie"
+            type="java.lang.Boolean" />
+
+        <variable
             name="homeViewModel"
             type="com.app.movie.presentation.ui.homepage.HomeViewModel" />
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorGrey"
+        android:orientation="vertical">
 
-        tools:context=".presentation.ui.homepage.HomeFragment">
-
-        <View
-            android:id="@+id/recommendedVideosV"
-            android:layout_width="@dimen/_4sdp"
-            android:layout_height="@dimen/_24sdp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:background="@color/red"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/recommendedVideosTv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:fontFamily="@font/muli_bold"
-            android:gravity="center"
-            android:text="@string/recommendedVideos"
-            android:textColor="@color/colorSubtitle"
-            android:textSize="@dimen/_18sdp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/recommendedVideosV"
-            app:layout_constraintStart_toEndOf="@+id/recommendedVideosV"
-            app:layout_constraintTop_toTopOf="@+id/recommendedVideosV" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recommendedVideosTrailerRv"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/toolbar_card"
+            style="@style/Widget.Card"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@android:color/transparent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="@dimen/_8sdp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recommendedVideosV"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:listitem="@layout/item_trailer" />
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/yellow3"
+            app:shapeAppearanceOverlay="@style/Widget.MainToolbar.Corner">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <LinearLayout
+                android:id="@+id/toolbar_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/back_button"
+                    style="@style/Widget.ImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dimen8dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="@dimen/dimen8dp"
+                    android:rotation="180"
+                    app:srcCompat="@drawable/ic_menu" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="@dimen/_4sdp"
+                    android:layout_weight="1"
+                    android:gravity="end|center"
+                    android:text="level"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="@dimen/match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="@dimen/dimen4dp"
+                    android:layout_weight="2"
+                    android:gravity="start|center"
+                    android:text="up"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                    android:textColor="@color/colorSubText" />
+
+                <ImageView
+                    android:id="@+id/bookmark_button"
+                    style="@style/Widget.ImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dimen8dp"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="@dimen/dimen8dp"
+                    android:scaleType="centerCrop"
+                    app:srcCompat="@drawable/ic_search" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <View
+                android:id="@+id/line1"
+                android:layout_width="@dimen/dimen2dp"
+                android:layout_height="@dimen/match_parent"
+                android:layout_marginStart="@dimen/dimen16dp"
+                android:layout_marginEnd="@dimen/dimen8dp"
+                android:background="@color/yellow1"
+                app:layout_constraintBottom_toBottomOf="@id/title_hor"
+                app:layout_constraintEnd_toStartOf="@id/title_hor"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/title_hor" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/title_hor"
+                android:layout_width="@dimen/match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen16dp"
+                android:text="top rated TV ٍSeries"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textColor="@color/unselectedTex"
+                app:layout_constraintBottom_toTopOf="@id/rvTVSeriesTopRated"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/line1"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <View
+                android:id="@+id/line2"
+                android:layout_width="@dimen/dimen2dp"
+                android:layout_height="@dimen/match_parent"
+                android:layout_marginStart="@dimen/dimen16dp"
+                android:layout_marginEnd="@dimen/dimen8dp"
+                android:background="@color/yellow1"
+                app:layout_constraintBottom_toBottomOf="@id/title_ver"
+                app:layout_constraintEnd_toStartOf="@id/title_ver"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/title_ver" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/title_ver"
+                android:layout_width="@dimen/match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_6sdp"
+                android:text="top movies"
+                android:textAppearance="?attr/textAppearanceHeadline6"
+                android:textColor="@color/unselectedTex"
+                app:layout_constraintBottom_toTopOf="@id/rvMoviesPlayingNow"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/line2"
+                app:layout_constraintTop_toBottomOf="@id/rvTVSeriesTopRated" />
+
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/loadingTVLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toTopOf="@id/line2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_hor">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <include layout="@layout/list_item_hor_loading" />
+
+                    <include layout="@layout/list_item_hor_loading" />
+
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/loadingMovieLayout"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_ver"
+                app:shimmer_repeat_mode="restart"
+
+                app:shimmer_shape="radial">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/list_item_ver_loading" />
+
+                    <include layout="@layout/list_item_ver_loading" />
+
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvMoviesPlayingNow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:nestedScrollingEnabled="false"
+                android:orientation="vertical"
+                android:padding="@dimen/dimen8dp"
+                app:layoutManager="LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_ver"
+                tools:listitem="@layout/list_item_ver" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvTVSeriesTopRated"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:orientation="horizontal"
+                android:padding="@dimen/dimen8dp"
+                app:layoutManager="LinearLayoutManager"
+                app:layout_constraintBottom_toTopOf="@id/line2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_hor"
+                tools:listitem="@layout/list_item_hor" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
