--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="transparentBackground">#66C1C1C1</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="mainBackground">#24292F</color>
-    <color name="colorPrimary">#3B58E2</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#E64A19</color>
+    <color name="colorPrimaryDark">#FB8C00</color>
+    <color name="colorAccent">#FFFF00</color>
     <color name="colorBlue">#2F47D9</color>
     <color name="color_blueish_bg">#F2F4FD</color>
     <color name="white">#FFFFFF</color>
@@ -58,7 +58,7 @@
     <color name="yellow2">#FB8C00</color>
     <color name="yellow3">#FFB300</color>
     <color name="yellow4">#FDD835</color>
-    <color name="yellow5">#C0CA33</color>
+    <color name="yellow5">#2AC0CA33</color>
     <color name="yellow6">#FFFF00</color>
     <color name="lightGray">#B3B3B3</color>
 
