--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -279,6 +279,8 @@
         <item name="cardElevation">@dimen/dimen2dp</item>
         <item name="cardPreventCornerOverlap">false</item>
         <item name="rippleColor">@color/yellow1</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
     </style>
 
     <style name="Widget.ImageButton" parent="">
