--- a/app/src/main/res/layout/item_trailer.xml
+++ b/app/src/main/res/layout/item_trailer.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:elevation="@dimen/_8sdp"
-            android:src="@drawable/ic_play"
+            android:src="@drawable/ic_play2"
             tools:ignore="ContentDescription" />
 
     </androidx.cardview.widget.CardView>
