--- a/app/src/main/res/layout/list_item_hor.xml
+++ b/app/src/main/res/layout/list_item_hor.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="tvInteraction"
+            type="com.app.movie.presentation.ui.homepage.TVSeriesTopRatedAdapter.TVSeriesInteraction" />
+
+        <variable
             name="tvSeries"
             type="com.app.movie.datasource.network.models.TVSeriesTopRatedResult" />
     </data>
@@ -15,6 +19,7 @@
         style="@style/Widget.Card"
         android:layout_width="150dp"
         android:layout_height="200dp"
+        android:onClick="@{() -> tvInteraction.onTVSeriesItemSelected(tvSeries)}"
         android:layout_margin="8dp"
         android:transitionName="shared_element_container"
         app:cardBackgroundColor="@android:color/transparent"
@@ -30,6 +35,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="fitXY"
+                tools:srcCompat="@mipmap/hustle"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
