--- a/app/src/main/res/layout/list_item_ver.xml
+++ b/app/src/main/res/layout/list_item_ver.xml
@@ -8,12 +8,17 @@
         <variable
             name="movie"
             type="com.app.movie.datasource.network.models.MovieNowPlayingResultsItem" />
+
+        <variable
+            name="movieInteraction"
+            type="com.app.movie.presentation.ui.homepage.MoviePlayingNowAdapter.MovieInteraction" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         style="@style/Widget.Card"
         android:layout_width="match_parent"
+        android:onClick="@{() -> movieInteraction.onMovieItemSelected(movie)}"
         android:layout_height="@dimen/item_height"
         android:layout_margin="@dimen/dimen8dp"
         android:transitionName="shared_element_container"
@@ -29,6 +34,7 @@
                 android:id="@+id/poster"
                 android:layout_width="@dimen/match_parent"
                 android:layout_height="@dimen/match_parent"
+                tools:srcCompat="@mipmap/hustle"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
