--- a/app/src/main/res/layout/list_item_hor.xml
+++ b/app/src/main/res/layout/list_item_hor.xml
@@ -31,11 +31,12 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/poster"
+                android:id="@+id/imageViewHome"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:scaleType="fitXY"
                 tools:srcCompat="@mipmap/hustle"
+                android:transitionName="imageViewHome"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
