--- a/app/src/main/res/layout/list_item_ver.xml
+++ b/app/src/main/res/layout/list_item_ver.xml
@@ -31,10 +31,11 @@
             android:layout_height="match_parent">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/poster"
+                android:id="@+id/imageViewHome"
                 android:layout_width="@dimen/match_parent"
                 android:layout_height="@dimen/match_parent"
                 tools:srcCompat="@mipmap/hustle"
+                android:transitionName="imageViewHome"
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
