--- a/app/src/main/res/layout/item_movie_popular.xml
+++ b/app/src/main/res/layout/item_movie_popular.xml
@@ -79,7 +79,8 @@
             android:background="@drawable/round_rectangle_border_gray"
             android:gravity="center"
             android:padding="4dp"
-            android:text="action"
+            android:text="@string/action"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toStartOf="@+id/textView3"
             app:layout_constraintHorizontal_bias="0.5"
@@ -97,7 +98,9 @@
             android:background="@drawable/round_rectangle_border_gray"
             android:gravity="center"
             android:padding="4dp"
-            android:text="drama"
+            android:text="@string/drama"
+            android:textColor="@color/black"
+
             app:layout_constraintEnd_toStartOf="@+id/textView4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -111,7 +114,8 @@
             android:background="@drawable/round_rectangle_border_gray"
             android:gravity="center"
             android:padding="4dp"
-            android:text="history"
+            android:text="@string/fantasy"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
