--- a/app/src/main/res/layout/item_t_v_on_the_air.xml
+++ b/app/src/main/res/layout/item_t_v_on_the_air.xml
@@ -14,6 +14,18 @@
         <variable
             name="isDetailsVisible"
             type="Boolean" />
+
+        <variable
+            name="position"
+            type="java.lang.Integer" />
+
+        <variable
+            name="isFav"
+            type="java.lang.Boolean" />
+
+        <variable
+            name="listener"
+            type="com.app.movie.presentation.base.ItemClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -22,6 +34,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:onClick="@{(thisView) -> listener.onClick(position,thisView)}"
         android:background="@drawable/round_rectangle_white_transparent">
 
         <androidx.cardview.widget.CardView
