--- a/app/src/main/res/layout/item_movie_playing_now.xml
+++ b/app/src/main/res/layout/item_movie_playing_now.xml
@@ -12,6 +12,18 @@
             type="com.app.movie.datasource.network.models.movies.MovieNowPlayingResultsItem" />
 
         <variable
+            name="position"
+            type="java.lang.Integer" />
+
+        <variable
+            name="isFav"
+            type="java.lang.Boolean" />
+
+        <variable
+            name="listener"
+            type="com.app.movie.presentation.base.ItemClickListener" />
+
+        <variable
             name="isDetailsVisible"
             type="Boolean" />
     </data>
@@ -22,6 +34,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:onClick="@{(thisView) -> listener.onClick(position,thisView)}"
         android:background="@drawable/round_rectangle_white_transparent">
 
         <androidx.cardview.widget.CardView
