--- a/app/src/main/res/layout/item_t_v_top_rated.xml
+++ b/app/src/main/res/layout/item_t_v_top_rated.xml
@@ -14,12 +14,26 @@
         <variable
             name="isDetailsVisible"
             type="Boolean" />
+
+        <variable
+            name="position"
+            type="java.lang.Integer" />
+
+        <variable
+            name="isFav"
+            type="java.lang.Boolean" />
+
+        <variable
+            name="listener"
+            type="com.app.movie.presentation.base.ItemClickListener" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/containerLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:onClick="@{(thisView) -> listener.onClick(position,thisView)}"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_rectangle_white_transparent">
