--- a/app/src/main/res/layout/list_item_ver.xml
+++ b/app/src/main/res/layout/list_item_ver.xml
@@ -10,15 +10,24 @@
             type="com.app.movie.datasource.network.models.movies.MovieNowPlayingResultsItem" />
 
         <variable
-            name="movieInteraction"
-            type="com.app.movie.presentation.ui.homepage.HomeMoviePlayingNowAdapter.MovieInteraction" />
+            name="position"
+            type="java.lang.Integer" />
+
+        <variable
+            name="isFav"
+            type="java.lang.Boolean" />
+
+        <variable
+            name="listener"
+            type="com.app.movie.presentation.base.ItemClickListener" />
+
+
     </data>
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card"
         style="@style/Widget.Card"
         android:layout_width="match_parent"
-        android:onClick="@{() -> movieInteraction.onMovieItemSelected(movie)}"
         android:layout_height="@dimen/item_height"
         android:layout_margin="@dimen/dimen8dp"
         android:transitionName="shared_element_container"
@@ -34,15 +43,16 @@
                 android:id="@+id/imageViewHome"
                 android:layout_width="@dimen/match_parent"
                 android:layout_height="@dimen/match_parent"
-                tools:srcCompat="@mipmap/hustle"
-                android:transitionName="imageViewHome"
+                android:onClick="@{(thisView) -> listener.onClick(position,thisView)}"
                 android:scaleType="centerCrop"
+                android:transitionName="imageViewHome"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:load_backdrop="@{movie.backdropPath}"
-                app:shapeAppearance="@style/Widget.listItem.Corner" />
+                app:shapeAppearance="@style/Widget.listItem.Corner"
+                tools:srcCompat="@mipmap/hustle" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/title"
@@ -61,7 +71,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dimen24dp"
-                android:background="@drawable/corner_rectangle"
+                android:background="@{isFav ? @drawable/corner_rectangle_fav : @drawable/corner_rectangle}"
+                android:onClick="@{(thisView) -> listener.onClick(position,thisView)}"
                 android:padding="@dimen/dimen8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
