finish favourite items

--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -21,7 +21,7 @@
         app:showAsAction="always"
         android:title="@string/tv" />
     <item
-        android:id="@+id/favFragment"
+        android:id="@+id/favouriteFragment"
         android:icon="@drawable/nav_fav"
 
         android:orderInCategory="4"
